--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Poppins:wght@300;400;500;700");
+/*@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Poppins:wght@300;400;500;700");
 
 body {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 300; /* if you want the light version */
+  font-weight: 300;
   background: #F7F9FC;
   color: #575F7D;
   font-family: 'Lora', serif;
@@ -69,25 +69,22 @@ div {
   unicode-bidi: isolate;
 }
 .container {
-  width: 500px;  /* This sets the width */
+  width: 500px;
   margin: 0 auto;
 }
 @media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
   .container {
     width: 700px;
   }
 }
 
 @media (max-width: 720px) {
-  /* For a screen < 720px, this CSS will be read */
   .container {
     width: 500px;
   }
 }
 
 @media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
   }
@@ -129,3 +126,4 @@ div {
 .card-white ul {
 padding-left: 0px;
 }
+*/
